# pytch

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  DESIGN.md  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: 1_Bug_report.md  2_Feature_request.md  3_Documentation_issue.md
docs/: .buildinfo  CNAME  about.html  genindex.html  getting-started.html  index.html  language-reference.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt  language-reference.rst.txt
docs/_static/: alabaster.css
docs/language-reference/: expressions.html  lexical-analysis.html  notation.html
docs/usage/: getting-started.html
hooks/: install-hooks.sh  pre-commit
pytch/: __init__.py  __main__.py  ast.py  ast.txt  binder.py  codegen.py  containers.py  cstquery.py  errors.py  fuzz.py  grammar.py  greenast.py  greencst.py  lexer.py  naming.py  parse.py  parser.py  redast.py  redcst.py  repl.py  syntax_tree.txt  typesystem.py  utils.py
pytch/codegen/: __init__.py  py3ast.py
pytch/typesystem/: __init__.py  builtins.py  judgments.py  reason.py  (+2 more)
stubs/: afl.pyi  distance.pyi  pyrsistent.pyi  pytest.pyi
test/: __init__.py  conftest.py  test_binder.py  test_codegen.py  test_cstquery.py  test_errors.py  test_grammar.py  test_init.py  test_integ.py  test_lexer.py  test_naming.py  test_parse.py  test_parser.py  test_typesystem.py  test_utils.py  utils.py
website/: about.rst  conf.py  index.rst
(+235 files in other folders)
