[tool.poetry]
name = "pytch"
version = "0.0.1"
description = "An expression-oriented, tooling-focused language that compiles down to Python."
authors = ["Waleed Khan <me@waleedkhan.name>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arxanas/pytch"
repository = "https://github.com/arxanas/pytch"

[tool.poetry.scripts]
pytch = "pytch.__main__:cli"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^18.2"
click = "^7.0"
distance = "^0.1.3"
pyrsistent = "^0.14.8"
typing = "^3.6"
typing-extensions = "^3.6"

# Not real dependencies, see https://github.com/sdispater/poetry/issues/759
cython = {version = "^0.29.2",optional = true}
python-afl = {version = "^0.7.1",optional = true}

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.6"
flake8-bugbear = "^18.8"
flake8-import-order = "^0.18.0"
mypy = "^0.650.0"
pytest = "^4.0"
pytest-pythonpath = "^0.7.3"
rope = "^0.11.0"
sphinx = "^1.8"
pytest-cov = "^2.6"

[tool.poetry.extras]
fuzz = ["cython", "python-afl"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
